# QuantDynPI

./: .clang-format  .gitignore  CMakeLists.txt  CODE_STYLE.md  Doxyfile  INSTALLING.md  README.md  build.sh  run_tests.sh
input/: ammonia.json  init_ammonia.xyz  init_water.xyz  water.json
src/: CMakeLists.txt
src/core/: CMakeLists.txt  Ensemble.cpp  Ensemble.hpp  Input.cpp  Input.hpp  Simulation.cpp  Simulation.hpp  main.cpp  main_grid.cpp
src/core/dynamics/: CMakeLists.txt  ClassicalDynamics.cpp  ClassicalDynamics.hpp  Dynamics.cpp  Dynamics.hpp  GridQCMD.cpp  GridQCMD.hpp  QCDynamics.cpp  QCDynamics.hpp  QuasiThermostat.cpp  QuasiThermostat.hpp
src/core/dynamics/qcmd/: CMakeLists.txt  QCMD.cpp  QCMD.hpp  TetraatomicQCMD.cpp  TetraatomicQCMD.hpp  TriatomicQCMD.cpp  TriatomicQCMD.hpp
src/core/normal_modes/: CMakeLists.txt  NormalModes.cpp  NormalModes.hpp
src/core/potentials/: AmmoniaPES.cpp  AmmoniaPES.hpp  Ammonia_Dipole_AQZfc.f90  Ammonia_Dipole_AQZfc_original.f90  Ammonia_Dipole_cpp_wrapper.hpp  Ammonia_PES_Constants.hpp  CMakeLists.txt  GasQTIP4P.cpp  GasQTIP4P.hpp  Harmonic.cpp  Harmonic.hpp  PartridgeSchwenke.cpp  PartridgeSchwenke.f90  PartridgeSchwenke.hpp  PartridgeSchwenkeDMS.f90  PartridgeSchwenkeWrappers.hpp  Potential.cpp  Potential.hpp  SilveraGoldman.cpp  SilveraGoldman.hpp  SplinePot.cpp  SplinePot.hpp
src/core/recorder/: CMakeLists.txt  TCF.cpp  TCF.hpp  TrajectoryRecorder.cpp  TrajectoryRecorder.hpp
src/core/ringpolymer/: AdiabaticRP.cpp  AdiabaticRP.hpp  CMakeLists.txt  QuasiCentroidRP.cpp  QuasiCentroidRP.hpp  RingPolymer.cpp  RingPolymer.hpp
src/core/thermostat/: CMakeLists.txt  PILE.cpp  PILE.hpp  PILE_G.cpp  PILE_G.hpp  PILE_L.cpp  PILE_L.hpp  Thermostat.cpp  Thermostat.hpp
src/util/: AtomData.cpp  AtomData.hpp  CMakeLists.txt  IO_utils.cpp  IO_utils.hpp  NormalDistribution.cpp  NormalDistribution.hpp  RingPolymerUtils.cpp  RingPolymerUtils.hpp  rand_utils.cpp  rand_utils.hpp  unit_conversion.cpp  unit_conversion.hpp
tests/: CMakeLists.txt  mainTest.cpp
tests/core/: CMakeLists.txt
tests/core/normal_modesTest/: CMakeLists.txt  NormalModesTest.cpp
tests/core/potentialsTest/: CMakeLists.txt  HarmonicTest.cpp
tests/core/ringpolymerTest/: CMakeLists.txt  RingPolymerTest.cpp  test_input_file.json
tests/util/: CMakeLists.txt  IO_utilsTest.cpp  RingPolymerUtilsTest.cpp  initTest.xyz  rand_utilsTest.cpp  unit_conversionTest.cpp
